--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://ghanashyamvtatti.github.io/nala/",
+  "homepage": "https://ghanashyamvtatti.github.io/Nala/",
   "dependencies": {
     "lucide-react": "^0.555.0",
     "octokit": "^5.0.5",
