--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://ghanashyamvtatti.github.io/Nala/",
   "dependencies": {
+    "@mlc-ai/web-llm": "^0.2.80",
     "compromise": "^14.14.5",
     "lucide-react": "^0.555.0",
     "octokit": "^5.0.5",
